second tutorial angularApp dv

--- a/index.html
+++ b/index.html
@@ -7,7 +7,16 @@
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
+    <link rel="stylesheet" href="app.css">
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
     <script src="node_modules\angular\angular.js"></script>
+    <script src="controller/controller.js"></script>
+    <script src="services/dbService.js"></script>
     <script src="app.js"></script>
   </head>
   <body ng-controller="mainCtrl">
@@ -36,7 +45,47 @@
                   </div>
                 </div>
                 <div class="panel-footer text-right">
-                  <button class="btn btn-primary">Read more</button>
+                  <button class="btn btn-primary"
+                          ng-click="display(band)"
+                          data-toggle="modal"
+                          data-target="#myModal">
+                          Read more
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-lg-8 col-lg-offset-2">
+              <!-- Modal -->
+              <div id="myModal" class="modal fade" role="dialog">
+                <div class="modal-dialog">
+
+                  <!-- Modal content-->
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <button type="button" class="close" data-dismiss="modal">&times;</button>
+                      <h4 class="modal-title">{{activeBand.name}}</h4>
+                      <div class="row">
+                        <div class="col-lg-4">
+                          <img ng-src="{{activeBand.thumb1}}" class="img-responsive">
+                        </div>
+                        <div class="col-lg-4">
+                          <img ng-src="{{activeBand.thumb2}}" class="img-responsive">
+                        </div>
+                        <div class="col-lg-4">
+                          <img ng-src="{{activeBand.thumb3}}" class="img-responsive">
+                        </div>
+                      </div>
+                    </div>
+                    <div class="modal-body">
+                      <p>{{activeBand.info}}</p>
+                    </div>
+                    <div class="modal-footer">
+                      <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    </div>
+                  </div>
+
                 </div>
               </div>
             </div>
